--- a/novedades.hbs
+++ b/novedades.hbs
@@ -55,6 +55,10 @@
     </tr>
     {{/each}}
   </tbody>
-
+  // Link a una nueva ruta del formulario de ingreso de novedades
+  <div class="col-2 text-right">
+    <a href="/admin/novedades/agregar" class"btn btn-success">
+    <i class="fa fa-plus"></i>Nuevo</a>
+  </div>
 </div>
             
